<resources>
    <string name="app_name">CoinMarket</string>
    <string name="txt_splash">Midas Protocol \nAn intelligent platform to manage and invest cryptoassets \nAnytime - Anywhere - Secured!</string>
    <string name="facebook_btn_login">Login Facebook</string>
    <string name="google_btn_login">Login Google</string>
    <string name="search_hint">Input name coin</string>
    <string name="msg_about">About</string>
    <string name="lbl_about">About</string>
    <string name="lbl_title"> Coin Market</string>
    <string name="author">midas.coinmarket.view.SuggestionProvider</string>
    <string name="txt_sort">Sort</string>
    <string name="txt_switch">Switch currency</string>
    <string name="txt_book_mark">Book mark</string>
    <string name="txt_history">History</string>
    <string name="msg_hint_input_search">Input name coin</string>
    <string name="rb_id">ID</string>
    <string name="rb_rank">RANK</string>
    <string name="btn_submit">Submit</string>
    <string name="rb_volume_24h">VOLUME 24H</string>
    <string name="rb_percent_change_24h">PERCENT CHANGE 24H</string>
    <string name="title_history">History</string>
    <string name="txt_no_data">History empty</string>
    <string name="title_book_mark">Bookmark history</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_pin_to_top">Pin to top</string>
    <string name="txt_bookmark_empty">Bookmark Empty</string>
    <string name="msg_content_notification">Open app now !</string>
    <string name="account_type">midas.coinmarket.provider.ACCOUNT</string>
    <string name="title_confirm">CONFIRM REGISTER</string>
    <string name="txt_name_user">Name User</string>
    <string name="msg_error_name">Input your name.</string>
    <string name="msg_error_email">Input your email.</string>
    <string name="msg_email_not_validate">Email not validate.</string>
    <string name="txt_logout">Logout</string>
    <string name="facebook_app_id">2202554339760716</string>
    <string name="fb_login_protocol_scheme">fb2202554339760716</string>
    <string name="txt_name_email">Email</string>
    <string name="title_vol_24h">Vol\n(24h)</string>
    <string name="title_per_1h">Per\n(1h)</string>
    <string name="title_per_24h">Per\n(24h)</string>
    <string name="title_per_7d">Per\n(7d)</string>
    <string name="name_online_db">online_db_coin</string>
    <string name="msg_error_password">Input your password</string>
    <string name="txt_password">Password</string>
    <string name="user_name_validate">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_</string>
    <string name="btn_login">Login with account</string>
    <string-array name="value_currency">
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>TWD</item>
        <item>ZAR</item>
        <item>BTC</item>
        <item>ETH</item>
        <item>XRP</item>
        <item>LTC</item>
        <item>BCH</item>
    </string-array>
</resources>
