<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_sort"
        android:icon="@mipmap/ic_sort"
        android:title="@string/txt_sort" />
    <item
        android:id="@+id/item_switch"
        android:icon="@mipmap/ic_switch_currency"
        android:title="@string/txt_switch" />
    <item
        android:id="@+id/item_book_mark"
        android:icon="@mipmap/ic_book_mark"
        android:title="@string/txt_book_mark" />
    <item
        android:id="@+id/item_history"
        android:icon="@mipmap/ic_history"
        android:title="@string/txt_history" />
    <item
        android:id="@+id/item_logout"
        android:icon="@mipmap/ic_logout"
        android:title="@string/txt_logout" />
</menu>