<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_action_bar"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imv_back"
            android:layout_width="@dimen/value_45dp"
            android:layout_height="@dimen/value_45dp"
            android:padding="@dimen/value_12dp"
            android:src="@mipmap/ic_back" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_confirm"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/value_10dp"
        android:text="@string/txt_name_user"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/rl_action_bar" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Input your name"
        app:layout_constraintTop_toBottomOf="@id/tv_title_name" />

    <TextView
        android:id="@+id/tv_title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/value_10dp"
        android:text="@string/txt_name_email"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/edt_name" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Input your email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tv_title_email" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_20dp"
        android:text="CONFIRM"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>